--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -2,3 +2,7 @@
     font-family: Poppins-Bold;
     src: url(../../font/Poppins/Poppins-Bold.ttf);
 }
+@font-face {
+    font-family: Poppins-Light;
+    src: url(../../font/Poppins/Poppins-Light.ttf);
+}
