Added components, CSS improvements, models interfaces
Added components: Gift Card Details, Gift Card Preview, Filters
CSS improvements to Store List
Model interfaces click-props, filter values, product, store and gift-card-preview props

--- a/src/assets/styles/cmps/app/_header.scss
+++ b/src/assets/styles/cmps/app/_header.scss
@@ -6,10 +6,18 @@ header {
         align-items: center;
         text-decoration: none;
         color: $clr-txt-1;
+        height: fit-content;
+
+        &.active {
+            background-color: $clr-dark-red;
+            border-radius: 43px;
+            color: rgba(255, 255, 255, 1);
+        }
 
         .logo {
             filter: invert(1);
             margin-right: 12px;
+            // color: $clr-dark-red;
         }
     }
 }
@@ -17,4 +25,5 @@ header {
 .App-header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
