--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,3 +16,6 @@
 //* Components
 @import 'cmps/app/store-list';
 @import 'cmps/app/header';
+@import 'cmps/app/filters';
+@import 'cmps/app/store-gift-card';
+@import 'cmps/app/gift-details';
