--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -6,3 +6,7 @@
     font-family: Poppins-Light;
     src: url(../../font/Poppins/Poppins-Light.ttf);
 }
+@font-face {
+    font-family: Open-Sans;
+    src: url(../../font/Open_Sans/static/OpenSans/OpenSans-Regular.ttf);
+}
