--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -13,8 +13,9 @@ html {
 body {
   font-family: 'Poppins', cursive;
   font-size: rem(14px);
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
+  max-width: 1440px;
 }
 
 h1,
@@ -81,7 +82,7 @@ h2 {
 }
 
 h3 {
-  color: $clr-txt-2;
+  color: $clr-txt-3;
   font-size: em(20px);
   margin-bottom: 0;
 }
@@ -119,5 +120,5 @@ hr {
 p {
   font-size: em(20px);
   text-align: left;
-  margin-bottom: 30px;
+  width: 50%;
 }
