--- a/src/assets/styles/cmps/app/_store-list.scss
+++ b/src/assets/styles/cmps/app/_store-list.scss
@@ -2,25 +2,11 @@
     display: flex;
     column-gap: 32px;
     row-gap: 20px;
-    width: 100vw;
     flex-wrap: wrap;
-
+    // justify-content: space-between;
     .store-preview {
-        .store-gift-card {
-            height: em(120px);
-            width: em(204px);
-            border: 1px solid rgba(128, 128, 128, 0.182);
-            box-shadow: 0 4px 10px -3px #ddd;
-            border-radius: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            margin-bottom: 15px;
-            img {
-                max-width: 74%;
-            }
-        }
-        h5{
+        cursor: pointer;
+        h5 {
             width: em(204px);
         }
     }
