--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -7,6 +7,10 @@
     src: url(../../font/Poppins/Poppins-Light.ttf);
 }
 @font-face {
+    font-family: Poppins-Medium;
+    src: url(../../font/Poppins/Poppins-Medium.ttf);
+}
+@font-face {
     font-family: Open-Sans;
     src: url(../../font/Open_Sans/static/OpenSans/OpenSans-Regular.ttf);
 }
