--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -16,6 +16,7 @@ body {
   margin: 0 auto;
   text-align: center;
   max-width: 1440px;
+  color:$clr-txt-1;
 }
 
 h1,
@@ -53,7 +54,7 @@ p {
 
 a {
   // text-decoration: none;
-  line-height: lh(32px);
+  // line-height: lh(32px);
 
   &:hover {
     text-decoration: underline;
