--- a/src/assets/styles/cmps/app/_header.scss
+++ b/src/assets/styles/cmps/app/_header.scss
@@ -1,7 +1,20 @@
 header {
     display: flex;
+    color:$clr-txt-1;
 
-    a {
+    .logo-link {
+        display: flex;
+        text-decoration: none;
+        color:$clr-txt-1;
+
+        .logo {
+            filter: invert(1);
+            margin-right: 12px;
+            // color: $clr-dark-red;
+        }
+    }
+
+    .nav-link {
         display: flex;
         align-items: center;
         text-decoration: none;
@@ -14,11 +27,6 @@ header {
             color: rgba(255, 255, 255, 1);
         }
 
-        .logo {
-            filter: invert(1);
-            margin-right: 12px;
-            // color: $clr-dark-red;
-        }
     }
 }
 
