--- a/src/assets/styles/cmps/app/_store-list.scss
+++ b/src/assets/styles/cmps/app/_store-list.scss
@@ -6,6 +6,7 @@
     // justify-content: space-between;
     .store-preview {
         cursor: pointer;
+        text-decoration: none;
         h5 {
             width: em(204px);
         }
