--- a/src/assets/styles/cmps/app/_filters.scss
+++ b/src/assets/styles/cmps/app/_filters.scss
@@ -4,16 +4,18 @@
         display: flex;
         width: 100%;
         justify-content: space-between;
+        flex-wrap: wrap;
     }
     select, input {
         border-radius: 5px;
         margin: 0 32px 1px 0;
         border: 1px solid #DBDBDB;
         font-family: Open-Sans;
-        width: 178px;
+        width: 200px;
         padding: 5px;
     }
     input{
         margin-right: 0;
+        width: 300px;
     }
 }
