--- a/src/assets/styles/cmps/app/_store-gift-card.scss
+++ b/src/assets/styles/cmps/app/_store-gift-card.scss
@@ -7,7 +7,9 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-bottom: 15px;
+    // margin-bottom: 15px;
+    margin: 25px auto;
+    background-color: #ffffffbb;
 
     img {
         max-width: 74%;
