--- a/src/assets/styles/cmps/app/_store-list.scss
+++ b/src/assets/styles/cmps/app/_store-list.scss
@@ -1,7 +1,7 @@
 .store-list-container {
     display: flex;
     column-gap: 32px;
-    row-gap: 20px;
+    // row-gap: 10px;
     flex-wrap: wrap;
     // justify-content: space-between;
     .store-preview {
