--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -2,4 +2,6 @@
 $clr-txt-1: rgba(45,46,47,1);
 $clr-txt-2: rgba(110,112,114,1);
 $clr-txt-3: #047a97;
+$clr-txt-4: #2987a1;
 $clr-dark-red: #df0906;
+$clr-light-blue: #ebfafe;
