--- a/src/assets/styles/cmps/app/_gift-details.scss
+++ b/src/assets/styles/cmps/app/_gift-details.scss
@@ -8,16 +8,29 @@
         background-color: rgba(128, 128, 128, 0.184);
         padding: 20px;
 
-        .store-logo {
-            display: flex;
-            flex-direction: row;
-            max-height: 30px;
-        }
-
+        
         .select-gift-card-header {
             display: flex;
             align-items: center;
             gap: 20px;
+            margin-bottom: 60px;
+
+            .back-btn {
+                font-size: 2.3em;
+                color: $clr-txt-2;
+                border: 1px solid $clr-txt-2;
+                border-radius: 50%;
+                padding: 4px;
+                aspect-ratio: 1/1;
+                display: flex;
+                margin-right: 20px;
+            }
+    
+            .store-logo {
+                display: flex;
+                flex-direction: row;
+                max-height: 30px;
+            }
         }
 
         .gift-amount-btn {
@@ -34,9 +47,14 @@
             margin-bottom: 5px;
         }
 
+        h5 {
+            font-size: 1.1em;
+            margin-bottom: 20px;
+        }
         h4 {
             font-size: 1em;
             margin-bottom: 20px;
+            margin-top: 60px;
         }
     }
 
